my-apps/productivity/reactive-resume/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reactive-resume
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
